<resources>
    <string name="app_name">New York Tourist App</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="list_item_title">Title</string>
    <string name="list_item_description">description</string>
    <string name="title">Title</string>
    <string name="body_for_list_view">body for listView</string>
    <string name="link_to_location">Link to Location</string>
    <string name="description">Description</string>
    <string name="detail_image_content">image of the location</string>
    <string name="detail_number">number</string>
    <string name="detail_call">Call:</string>
    <string name="detail_address">Address</string>
    <string name="detail_website">Website:</string>
    <string name="detail_review_text">Review</string>
    <string name="detail_page_call_button">call button image</string>
    <string name="detail_page_address_button">address button image</string>
    <string name="detail_page_website_button">website button image</string>
    <string name="detail_page_weather_button">weather button image</string>
    <string name="header">Welcome to New York City!</string>
    <string name="subtitle">The city that never sleeps!</string>
    <string name="more_info">Here are some of our top attractions and restaurants to check out here in the big apple!:</string>
    <string name="image_of_museum">image of museum</string>
    <string name="image_of_restaurant">image of restaurant</string>
    <string name="image_of_times_square">image of times square</string>
    <string name="image_of_statue_of_liberty">image of statue of liberty</string>
    <string name="detail_weather">Weather: </string>
    <string name="list_item_image">list_item_image</string>
    <string name="share_menu">Share</string>
    <string name="favorite_menu">Favorite</string>
    <string name="main_good_eats">Good Eats</string>
    <string name="main_museums">Museums</string>
    <string name="main_landmarks">Landmarks</string>
    <string name="main_fun_things_to_do">Fun Attractions</string>
    <string name="main_image_banner_description">image of NYC skyline for the banner</string>
    <string name="setting_switch_title">Night Mode</string>
    <string name="switch_summary_off">Turn on Night Mode</string>
    <string name="switch_summary_on">Turn off Night Mode</string>
    <string-array name="locTitle">
        <item>Landmarks</item>
        <item>Restaurants/Street Food</item>
        <item>Excursions/Attractions</item>
        <item>Museums</item>
    </string-array>
    <string-array name="locImage">
        <item>@drawable/food1</item>
    </string-array>
    <string-array name="locDescription">
        <item>Awesome NYC LandMarks!!</item>
        <item>Delicious Food!!</item>
        <item>Fun Fun Fun!!!!</item>
        <item>Where History and Beauty Clash!</item>
    </string-array>
    <string-array name="food_titles">
        <item>Jimmys Grand Cafe</item>
        <item>Slate NYC</item>
        <item>Katz\'s Delicatessen</item>
        <item>Tao Downtown</item>
        <item>Dulce Vida Latin Bristro</item>
    </string-array>
    <string-array name="food_links">
        <item>https://www.jimmysgrandcafe.com/</item>
        <item>https://slate-ny.com/</item>
        <item>https://katzsdelicatessen.com/</item>
        <item>https://taogroup.com/venues/tao-downtown-new-york/</item>
        <item>https://www.dulcevidalatinbistro.com/</item>
    </string-array>
    <string-array name="food_images">
        <item>@drawable/food1</item>
        <item>@drawable/food2</item>
        <item>@drawable/food3</item>
        <item>@drawable/food4</item>
        <item>@drawable/food5</item>
    </string-array>
    <string-array name="food_description">
        <item>At Jimmy\'s we serve up fresh and healthy American cuisine. Choose from our selections of breakfast items, soups, salads, sandwiches, hamburgers and much, much more!!! If you can\'t make it to us - no problem - we\'ll come to you! Click on the Order Online tab above and we\'ll deliver right to your home or office. And be sure to make use of our advance order feature to ensure that your food is delivered exactly when you want it. Order from work and have our delicious cuisine arrive at your door right after you get home! </item>
        <item>Located in the heart of Chelsea, Slate remains one of New York City\’s iconic hotspots. Equal parts upscale bar and lounge, event space, nightclub and adult playground, its elegant design delivers a venue that has something for everyone, and its beautifully designed games area and self serve drink wall will keep the fun going all night long!</item>
        <item>In 1888, a small deli by the name of Iceland Brothers was established on Ludlow Street in New York\’s Lower East Side by the Iceland brothers. Upon the arrival of Willy Katz in 1903, the name of the store was officially changed to "Iceland and Katz". Willy’s cousin Benny joined him in 1910, buying out the Iceland brothers to officially form Katz\’s Delicatessen. Their landsman Harry Tarowsky bought into the partnership in April 1917. Katz\’s Deli was moved across the street, to its present location, during the construction of the subway system. The vacant lot on Houston Street (pronounced "House–ton" after a Dutch emigrant of the same name) was home to barrels of meat and pickles until the present storefront facade was added between 1946–49.</item>
        <item>This enormous, club like Pan-Asian eatery is known for a huge Buddha centerpiece and a trendy crowd.</item>
        <item>We have revamped our menu and completely remodeled our restaurant to make the dining experience even better. We are still serving the best Colombian cuisine in New York City along with some new Latin-inspired dishes.</item>
    </string-array>
    <string-array name="food_review">
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>

    </string-array>
    <string-array name="food_address">
        <item>1001 Castle Hill Ave, The Bronx, NY 10472</item>
        <item>54 W 21st St, New York, NY 10010</item>
        <item>205 East Houston Street, New York, NY 10002</item>
        <item>92 9th Ave, New York, NY 10011</item>
        <item>1219 Lexington Avenue, New York, NY 10028</item>

    </string-array>
    <string-array name="food_phoneNumber">
        <item>7183191200</item>
        <item>2129890096</item>
        <item>2122542246</item>
        <item>2128882724</item>
        <item>2125352424</item>

    </string-array>
    <string-array name="museums">
        <item>The MET</item>
        <item>The Museum of Natural History</item>
        <item>The MoMa</item>
        <item>Brooklyn museum</item>
        <item>9/11 Memorial</item>
    </string-array>
    <string-array name="museums_link">
        <item>https://www.metmuseum.org/</item>
        <item>https://www.amnh.org/</item>
        <item>https://www.moma.org/</item>
        <item>https://www.brooklynmuseum.org/</item>
        <item>https://www.911memorial.org/</item>
    </string-array>
    <string-array name="museums_description">
        <item>The Metropolitan Museum of Art of New York City, colloquially "the Met", is the largest art museum in the United States. With 6,479,548 visitors to its three locations in 2019, it was the fourth most visited art museum in the world.</item>
        <item>The American Museum of Natural History, located on the Upper West Side of Manhattan, New York City, is one of the largest natural history museums in the world.</item>
        <item>The Museum of Modern Art is an art museum located in Midtown Manhattan, New York City, on 53rd Street between Fifth and Sixth Avenues. It plays a major role in developing and collecting modern art, and is often identified as one of the largest and most influential museums of modern art in the world.</item>
        <item>The Brooklyn Museum is an art museum located in the New York City borough of Brooklyn. At 560,000 square feet, the museum is New York City\'s third largest in physical size and holds an art collection with roughly 1.5 million works</item>
        <item>The National September 11 Memorial Museum is a memorial and museum in New York City commemorating the September 11, 2001 attacks, which killed 2,977 people, and the 1993 World Trade Center bombing, which killed six. </item>
    </string-array>
    <string-array name="museums_number">
        <item>2125357710</item>
        <item>5205582396</item>
        <item>2127089400</item>
        <item>7186385000</item>
        <item>2123128800</item>
    </string-array>
    <string-array name="museums_address">
        <item>1000 5th Ave, New York, NY 10028</item>
        <item>200 Central Park West, New York, NY 10024</item>
        <item>11 W 53rd St, New York, NY 10019</item>
        <item>200 Eastern Pkwy, Brooklyn, NY 11238</item>
        <item>180 Greenwich St, New York, NY 10007</item>
    </string-array>
    <string-array name="museums_images">
        <item>@drawable/the_met</item>
        <item>@drawable/museum_natural_history</item>
        <item>@drawable/moma</item>
        <item>@drawable/brooklyn_museum</item>
        <item>@drawable/nine_eleven_memorial</item>
    </string-array>
    <string-array name="landmark_titles">
        <item>The Statue of Liberty</item>
        <item>Central Park</item>
        <item>Empire State Building</item>
        <item>Grand Central Station</item>
        <item>One World Trade Center</item>
        <item>Charging Bull</item>
    </string-array>
    <string name="favorites_icon_list_item">favorites icon</string>
    <string name="body_for_list_item">body</string>
    <string name="title_add_new_place">Title</string>
    <string name="phone_number_add_new_place">Phone Number</string>
    <string name="website_url_add_new_place">Website URL</string>
    <string name="place_type_add_new_place">Place Type</string>
    <string name="add_new_place">Add New Place</string>
</resources>