<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/place_image"
            style="@style/Base.CardView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:background="@drawable/statue_of_liberty_banner2"
            android:contentDescription="@string/list_item_image" />

        <TextView
            android:id="@+id/place_title"
            style="@style/Base.CardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/title"
            android:textColor="@color/colorPrimaryDark"
            android:textAllCaps="false"
            android:textSize="26sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/place_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/body_for_list_item"
            android:textColor="@color/colorAccent"
            android:padding="8dp"
            style="@style/Base.CardView" />

    </LinearLayout>

    <ImageView
        android:id="@+id/list_item_favorite_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:srcCompat="@drawable/favorite_icon"
        android:contentDescription="@string/favorites_icon_list_item"
        android:translationY="115dp"/>

</androidx.cardview.widget.CardView>