<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".AddNewPlace">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/add_new_place" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/title_add_new_place" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/title_add_new_place" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/description" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/phone_number_add_new_place" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="200dp"
        android:layout_marginEnd="200dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/detail_address" />

    <EditText
        android:id="@+id/editTextPostalAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:inputType="textPostalAddress" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/website_url_add_new_place" />

    <EditText
        android:id="@+id/editTextWebsite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:inputType="textWebEditText" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/place_type_add_new_place" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="200dp"
        android:layout_marginEnd="200dp"/>

</LinearLayout>